--- a/local/cribl/cribl.yml
+++ b/local/cribl/cribl.yml
@@ -7,7 +7,8 @@ api:
     disabled: true
   host: 0.0.0.0
   port: 9009
-git: {}
+git:
+  remote: git@github.com:dritanbitincka/myrepo333.git
 tls:
   defaultEcdhCurve: auto
   rejectUnauthorized: true
