--- a/groups/NewGroup22/local/cribl/pipelines/route.yml
+++ b/groups/NewGroup22/local/cribl/pipelines/route.yml
@@ -13,7 +13,7 @@ routes:
   - id: default
     name: default
     final: true
-    disabled: true
+    disabled: false
     pipeline: main
     description: ""
     clones: []
