admin: new datagen

--- a/groups/default/local/cribl/inputs.yml
+++ b/groups/default/local/cribl/inputs.yml
@@ -19,3 +19,9 @@ inputs:
       disabled: true
     ipWhitelistRegex: /.*/
     authToken: ""
+  foogen:
+    disabled: false
+    samples:
+      - eventsPerSec: 2
+        sample: syslog
+    type: datagen
