admin: latest commit

--- a/groups/NewGroup22/local/cribl/pipelines/route.yml
+++ b/groups/NewGroup22/local/cribl/pipelines/route.yml
@@ -13,7 +13,7 @@ routes:
   - id: LCvC5e
     name: foobar3
     final: true
-    disabled: false
+    disabled: true
     pipeline: devnull
     description: ""
     clones: []
